--- a/13Books_front/src/assets/CSS/loginRegister.css
+++ b/13Books_front/src/assets/CSS/loginRegister.css
@@ -38,6 +38,7 @@
     font-style: italic;
     width: 120px;
 }
+
 main {
     display: flex;
     justify-content: center;
@@ -52,13 +53,14 @@ main {
     row-gap: 30px;
 }
 
+
+
 .logName,
 .logPass {
     width: 100%;
     height: 35px;
     display: flex;
     align-items: center;
-    border: 1px solid red;
 }
 
 .logName label,
@@ -95,24 +97,46 @@ main {
     width: 200px;
     font-family: 'Roboto Serif', serif;
     font-size: 1em;
-    font-weight: 600;
+    font-weight: 300;
 }
 
-.logButt button {
+.logEnt,
+.regReg {
     background-color: var(--coral);
     border: none;
     font-style: italic;
-    
+    color: var(--green-white);
+}
+
+.logReg {
+    border: 4px solid var(--coral);
+    background-color: var(--green-white);
+    font-style: italic;
+
 }
 
 .logButt .reactLink {
-  color: var(--green-white);
+color: var(--morado);
 }
 
-/* footer {
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
+.logEnt:hover,
+.regReg:hover {
+    background-color: var(--morado);
+    border: 4px solid var(--morado);
+}
 
-} */
+.logReg:hover {
+    border: 4px solid var(--morado);
+    background-color: var(--morado);
+}
+
+.logReg .reactLink:hover {
+    color: var(--green-white);
+}
+
+.errorMessage {
+    height: 30px;
+    color: var(--coral);
+    font-weight: 600;
+    font-size: 1.2em;
+}
