--- a/13Books_front/src/assets/CSS/singleProduct.css
+++ b/13Books_front/src/assets/CSS/singleProduct.css
@@ -1,1 +1,35 @@
-  
+.singleProductMain {
+    width: 100%;
+}
+
+.singleBookCard {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    column-gap: 30px;
+    justify-content: center;
+}
+
+.singleBookCard img {
+    width: 40%;
+    height: auto;
+}
+
+.singleBookCard div {
+    max-width: 40%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.singleBookCard h1 {
+    font-size: 1.5em;
+}
+
+.etiquetasSingle {
+    display: flex;
+    flex-direction: row;
+    margin-left: 0px;
+    font-size: 0.6em;
+
+}
