--- a/13Books_front/src/assets/CSS/admin.css
+++ b/13Books_front/src/assets/CSS/admin.css
@@ -46,7 +46,7 @@
     border: 4px solid var(--verde);
     width: 60%;
     height: 80px;
-    padding: 20px
+    padding: 20px;
 }
 
 .cardInfoEdit {
