--- a/13Books_front/src/assets/CSS/nav.css
+++ b/13Books_front/src/assets/CSS/nav.css
@@ -1,99 +1,25 @@
-header {
-    margin: 20px 40px;
+
+nav {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
+    margin: 0px 40px;
 }
-
-.log button {
-    width: 150px;
-    height: 50px;
-    font-family: 'Roboto Serif';
-    font-weight: 800;
-    color: var(--verde-oscuro);
-}
-
-.log button:first-child {
-    margin-right: 10px;
-    font-style: italic;
-    background-color: var(--green-white);
-    border: 7px solid var(--mostaza);
-}
-
-.log button:first-child:hover {
-    background-color: var(--mostaza);
-    font-style: normal;
-}
-
-.log button:last-child {
-    background-color: var(--mostaza);
-    border: none;
-    
-}
-
-.logHome{
-    border: 7px solid var(--mostaza);
-    color: var(--green-white);
-   font-weight: 100;
-}
-
-.log button:last-child:hover {
-    background-color: var(--green-white);
-    border: 7px solid var(--mostaza);
-    font-style: italic;
-}
-
-.log button:first-child:active,
-.log button:last-child:active {
-    background-color: var(--morado);
-    border: none;
-    color: var(--green-white)
-}
-
-.logued {
-    display: flex;
-    align-items: center;
-    color: var(--morado);
-}
-
-.logued .reactLink {
-    display: flex;
-    color: var(--verde);
-}
-
-.logued i {
-    font-size: 1.7em;
-    margin-right: 15px;
-}
-
-.counterCarrito {
-    background-color: var(--coral);
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    color: var(--green-white);
-    position: relative;
-    left: 35px;
-    top: 10px;
-}
-
 
 .etiquetas {
-    margin: 0px 40px;
+    width: 100%;
     cursor: pointer;
-}
-.etiquetas ul {
-    display: flex;
-    justify-content: space-between;
-    column-gap: 10px;
     list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 10px;
 }
 
 .etiquetas li {
     font-style: italic;
-    padding: 5px 25px;
+    padding: 5px 35px;
     border: 3px solid var(--verde);
 }
 
@@ -149,6 +75,7 @@ header {
     border: 4px solid var(--mostaza);
     color: var(--morado);
 }
+
 .search button i {
     color: var(--morado);
     padding-right: 10px;
@@ -168,7 +95,6 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     column-gap: 30px;
-
 }
 
 .searchErrorMessage {
@@ -179,7 +105,21 @@ header {
     height: 50px;
     width: 100%;
     text-align: center;
+}
 
+.editButton {
+    font-family: 'Roboto Serif';
+    background-color: var(--morado);
+    border: none;
+    padding: 5px;
+    margin-top: 5px;
     
 }
 
+.editButton .reactLink {
+    color: var(--green-white);
+}
+
+.editButton:hover {
+    background-color: var(--coral);
+}
