--- a/13Books_front/src/assets/CSS/singleProduct.css
+++ b/13Books_front/src/assets/CSS/singleProduct.css
@@ -10,7 +10,7 @@
     justify-content: center;
 }
 
-.singleBookCard img {
+.bookCardImg {
     width: 40%;
     height: auto;
 }
@@ -24,12 +24,16 @@
 
 .singleBookCard h1 {
     font-size: 1.5em;
+    color: var(--morado);
 }
 
-.etiquetasSingle {
-    display: flex;
-    flex-direction: row;
-    margin-left: 0px;
-    font-size: 0.6em;
+.singleBookCardInfo p:last-child {
+    border: 4px solid var(--verde);
+    width: 25%;
+    padding: 10px;
+}
 
+.singleBookCardInfo h3 {
+    font-weight: 500;
+    color: var(--morado);
 }
