--- a/13Books_front/src/assets/CSS/header.css
+++ b/13Books_front/src/assets/CSS/header.css
@@ -139,3 +139,16 @@ header {
     font-style: italic;
     width: 120px;
 }
+
+
+/* HEADER ADMIN */
+
+.fa-truck{
+    color: var(--verde);
+    font-size: 2em;
+    padding-left: 15px;
+}
+
+.fa-truck:hover {
+    color: var(--morado);
+}
