--- a/13Books_front/src/assets/CSS/main.css
+++ b/13Books_front/src/assets/CSS/main.css
@@ -26,3 +26,8 @@
     border: 4px solid var(--coral);
     color: var(--coral);
 }
+
+.botonCarrito .reactLink,
+.cotonCarrito .fa-cart-shopping {
+    color: var(--green-white);
+}
