--- a/13Books_front/src/assets/CSS/pedidos.css
+++ b/13Books_front/src/assets/CSS/pedidos.css
@@ -18,6 +18,23 @@
 .pedido {
     border: 4px solid var(--verde);
     width: 50%;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     line-height: 2em;
+    display: flex;
+    flex-direction: column;
+}
+
+.checkPedido {
+    align-self: flex-end;
+    position: relative;
+    bottom: 15px;
+    border: none;
+    color: var(--verde);
+}
+
+.checkPedido i {
+    font-size: 1.5em;
+}
+.checkPedido:hover {
+    color: var(--morado)
 }
