--- a/13Books_front/src/assets/CSS/singleProduct.css
+++ b/13Books_front/src/assets/CSS/singleProduct.css
@@ -27,7 +27,7 @@
     color: var(--morado);
 }
 
-.singleBookCardInfo p:last-child {
+.singleBookCardInfo p:nth-child(7) {
     border: 4px solid var(--verde);
     width: 25%;
     padding: 10px;
@@ -36,4 +36,17 @@
 .singleBookCardInfo h3 {
     font-weight: 500;
     color: var(--morado);
+}
+
+.singleBookCardInfo .reactLink .fa-cart-shopping {
+    background-color: var(--verde);
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5em;
+    width: 100%;
+}
+
+.singleBookCardInfo .reactLink .fa-cart-shopping:hover {
+    background-color: var(--morado);
+    color: var(--green-white);
 }
