commit pre render

--- a/13Books_front/src/assets/CSS/home.css
+++ b/13Books_front/src/assets/CSS/home.css
@@ -119,10 +119,12 @@
     margin-top: 40px;
     width: 75%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     border: 4px solid var(--verde);
     padding: 30px 20px;
     margin-bottom: 60px;
+    flex-wrap: wrap;
+    column-gap: 5%;
 }
 
 .bookDestacado {
