--- a/13Books_front/src/assets/CSS/pedidos.css
+++ b/13Books_front/src/assets/CSS/pedidos.css
@@ -117,3 +117,11 @@ h4 {
 .detallesPedidoLibros img {
     width: 100px;
 }
+
+.revervaItem {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0px;
+    width: 100%;
+}
